# lstm_forecast

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  README.md  backtest.sh  config.json  configuration.html  data_loader.py  genindex.html  index.html  installation.html  introduction.html  main.py  model.py  modules.html  objects.inv  predict.py  py-modindex.html  pyproject.toml  requirements.txt  run.sh  search.html  searchindex.js  setup.py  train.py  usage.html
.ipynb_checkpoints/: notebook-checkpoint.ipynb
_modules/: index.html
_sources/: introduction.rst.txt  modules.rst.txt
data/: BTC-USD.csv  optuna_feature_selection.db
docs/: BTCUSD_['Bollinger_High', 'Bollinger_Low', 'Ichimoku_Tenkan', 'Ichimoku_Kijun', 'Ichimoku_Senkou_Span_A', 'Ichimoku_Senkou_Span_B']_predictions.html  BTCUSD_['Bollinger_Low', 'Ichimoku_Tenkan', 'CMF']_predictions.html  BTCUSD_['SMA_200', 'MACD_Signal', 'Bollinger_High', 'ADX', 'Ichimoku_Senkou_Span_B']_predictions.html  BTCUSD_['SMA_50', 'SMA_200', 'EMA', 'Bollinger_High', 'Bollinger_Low', 'Ichimoku_Tenkan', 'Ichimoku_Kijun', 'Ichimoku_Senkou_Span_A', 'Ichimoku_Senkou_Span_B']_predictions.html  BTCUSD_predictions.html  BTC_['Bollinger_Low', 'Ichimoku_Tenkan', 'CMF']_predictions.html  BTC_predictions.html  ETHUSD_['Bollinger_Low', 'Ichimoku_Kijun', 'CMF']_predictions.html  ETHUSD_['Bollinger_Low', 'RSI']_predictions.html  ETHUSD_[]_predictions.html  index.html
html/: BTC_predictions.html  index.html
models/: AAPL_model.pth  BTCUSD_model.pth  MSFT_model.pth  NVDA_model.pth  S&P_500_model.pth  ^GSPC_model.pth  (+1 more)
(+553 files in other folders)
